--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="requirements\css\main.css">
     </head>
     <body>
 
@@ -25,7 +25,7 @@
         <header class = "header bg-bright" id = "header">
             <div class = "container">
                 <div class = "header-content text-center">
-                    <h6 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1">online resume builder</h6>
+                    <h6 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1">Online resume builder</h6>
                     <h1 class = "lg-title">Created By Manyata Ghadei</h1>
                     <div class="icons">
                             <ul >
@@ -42,15 +42,15 @@
                                 </a>
                             </ul>
                     </div>
-                    <p class = "text-dark fs-18">Use professional field-tested resume templates that follow that exact 'resume rules' employers look for. Easy to use and done within minutes - try now for free!</p>
-                    <a href = "resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
+                    <p class = "text-dark fs-18">Use professional field-tested resume templates. Easy to use and done within minutes - try now for free!</p>
+                    <a href = "resume.html" class = "btn btn-primary text-uppercase">Create resume</a>
                 </div>
             </div>
         </header>
         <footer class = "footer bg-dark">
             <div class="container">
                 <div class = "footer-content text-center">
-                    <p class="fs-15">&copy;Copyright 2023. All Rights Reserved - <span>Sanket</span></p>
+                    <p class="fs-15">&copy;Copyright 2023. All Rights Reserved - <span>Manyata</span></p>
                 </div>
             </div>
         </footer>
