Fix #1: added css enhancement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-        <nav class = "navbar bg-white">
+        <nav class = "navbar bg-blue">
             <div class="container">
                 <div class = "navbar-content">
                     <div class = "brand-and-toggler">
